--- a/Project.toml
+++ b/Project.toml
@@ -3,11 +3,10 @@ uuid = "669c76bc-767f-4084-a0ab-e2cae41b1e42"
 authors = ["Max de Rooij"]
 version = "1.0.0-DEV"
 
+[deps]
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
+
 [compat]
-julia = "1"
-
-[extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["Test"]
+julia = "1.9"
