--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,31 +39,31 @@ jobs:
           files: lcov.info
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      statuses: write
-    steps:
-      - uses: actions/checkout@v3
-      - uses: julia-actions/setup-julia@v1
-        with:
-          version: '1'
-      - name: Configure doc environment
-        run: |
-          julia --project=docs/ -e '
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - run: |
-          julia --project=docs -e '
-            using Documenter: DocMeta, doctest
-            using MealModel
-            DocMeta.setdocmeta!(MealModel, :DocTestSetup, :(using MealModel); recursive=true)
-            doctest(MealModel)'
+#   docs:
+#     name: Documentation
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: write
+#       statuses: write
+#     steps:
+#       - uses: actions/checkout@v3
+#       - uses: julia-actions/setup-julia@v1
+#         with:
+#           version: '1'
+#       - name: Configure doc environment
+#         run: |
+#           julia --project=docs/ -e '
+#             using Pkg
+#             Pkg.develop(PackageSpec(path=pwd()))
+#             Pkg.instantiate()'
+#       - uses: julia-actions/julia-buildpkg@v1
+#       - uses: julia-actions/julia-docdeploy@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+#       - run: |
+#           julia --project=docs -e '
+#             using Documenter: DocMeta, doctest
+#             using MealModel
+#             DocMeta.setdocmeta!(MealModel, :DocTestSetup, :(using MealModel); recursive=true)
+#             doctest(MealModel)'
