--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Max de Rooij"]
 version = "1.0.0-DEV"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LatinHypercubeSampling = "a5e1c1ea-c99a-51d3-a14d-a9a37257b02d"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
